--- a/default.css
+++ b/default.css
@@ -31,6 +31,16 @@ margin-left: 5%;
 margin-right: 5%;
 border:0.5px solid green;
 }
+.tallennettu{
+margin-left: 30%;
+margin-right: 30%;
+border-radius: 8px;
+padding: 20px;
+text-align: center;
+box-shadow: 2px 3px #888888;
+background: linear-gradient(#2ECC40, #01FF70);
+display: none;
+}
 .pakolliset{
 margin-left: 20px;
 color: red;
